hdone/objects/Sf2SfSetting__mdt.object
<CustomObject>
    <description>Salesforce to Salesforce settings. As of Summer 15 PartnerNetworkRecordConnection cannot be queried, and Ids used, in Flow</description>
    <fields>
        <fullName>CustomerId_Sf2Sf__c</fullName>
        <description>Id from PartnerNetworkConnection for records shared from Customer to HealthDetail</description>
        <inlineHelpText>Customer to HealthDetail PartnerNetworkConnection Id</inlineHelpText>
        <label>CustomerId_Sf2Sf</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerId_Sf2Sf__c</fullName>
        <description>Id from PartnerNetworkConnection object when going from HealthDetail to Customer.</description>
        <inlineHelpText>HealthDetail to Customer PNC Id.</inlineHelpText>
        <label>PartnerId_Sf2Sf</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Name of product for shared record.</description>
        <inlineHelpText>Name of product for shared record.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product__mdt</referenceTo>
        <relationshipLabel>Sf2SfSettings</relationshipLabel>
        <relationshipName>Sf2SfSettings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ShareName_Sf2Sf__c</fullName>
        <description>Shared name for Salesforce to Salesforce. Does not necessary match actual PartnerNetworkConnection name as that cannot be changed which can be awkward.</description>
        <inlineHelpText>Name of company/account record is shared with.</inlineHelpText>
        <label>ShareName_Sf2Sf</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Sf2SfSetting</label>
    <pluralLabel>Sf2SfSettings</pluralLabel>
</CustomObject>